# tutorials

cosmic_python_with_fastapi/: config.py  conftest.py  fastapi_app.py  model.py  orm.py  pyproject.toml  pytest.ini  repository.py  services.py  test_allocate.py  test_orm.py  test_repository.py  test_services.py
cosmic_python_with_fastapi/adapters/: orm.py  repository.py
cosmic_python_with_fastapi/diagram/: domain_model.puml
cosmic_python_with_fastapi/domain/: model.py
cosmic_python_with_fastapi/entrypoints/: fastapi_app.py
cosmic_python_with_fastapi/service_layer/: services.py
cosmic_python_with_fastapi/tests/: conftest.py
cosmic_python_with_fastapi/tests/e2e/: test_api.py
cosmic_python_with_fastapi/tests/integration/: test_orm.py  test_repository.py
cosmic_python_with_fastapi/tests/unit/: test_services.py
implement_dns_in_a_weekend/: README.md  part1_build_a_dns_query.ipynb  part2_parse_the_response.ipynb
implement_dns_in_a_weekend/part_1/: request.py
legacy/pipeline/Lab1/: flow.py  flow_function-deployment.yaml
legacy/pipeline/Lab2/: flow.py  schema.py
pipeline/Lab2/: config.py  deployment.py
registry/Lab1/: boto3_tutorial.ipynb
