[tool.poetry]
name = "cosmic_python_with_fastapi"
version = "0.1.0"
description = ""
authors = ["hl8469"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.100.0"
uvicorn = {extras = ["standard"], version = "^0.23.1"}
sqlalchemy = "^2.0.19"
pydantic-settings = "^2.0.2"
asyncpg = "^0.28.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0.21.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
